@@ -1,7 +1,7 @@
 <?php
 /*<!--<wikitext>-->
 {{Extension
-|name        = AddScriptCss
+|name        = ShowRedirectPageText
 |status      = beta
 |type        = other
 |author      = [[user:jldupont|Jean-Lou Dupont]]
@@ -9,7 +9,7 @@
 |version     = See SVN ($Id$)
 |update      =
 |mediawiki   = tested on 1.10 but probably works with a earlier versions
-|download    = [http://bizzwiki.googlecode.com/svn/trunk/BizzWiki/extensions/AddScriptCss/ SVN]
+|download    = [http://bizzwiki.googlecode.com/svn/trunk/BizzWiki/extensions/ShowRedirectPageText/ SVN]
 |readme      =
 |changelog   =
 |description = 
@@ -41,13 +41,13 @@ This extension is part of the [[Extension:BizzWiki|BizzWiki Platform]].
 if (!isset( $bwExtPath ))
 	$bwExtPath = $IP.'/extensions';
 
-StubManager::createStub(	'AddScriptCss', 
-							$bwExtPath.'/addScriptCss/AddScriptCss.php',
-							null,							
-							array( 'OutputPageBeforeHTML', 'ParserAfterTidy' ),
-							false, 								// no need for logging support
-							array( 'addtohead', 'addscript' ),	// tags
-							array( 'addscript' ), 				//of parser function magic words,
-							null
+StubManager::createStub(	'ShowRedirectPageText', 
+							$bwExtPath.'/ShowRedirectPageText/ShowRedirectPageText.php',
+							null,
+							array( 'ArticleViewHeader', 'OutputPageParserOutput' ),
+							false,	// no need for logging support
+							null,	// tags
+							null,	// no parser functions
+							null	// no magic words
 						 );
 //</source>
