@@ -243,4 +243,5 @@ REL1_10_11: (released ...)
 - FileSystemSyntaxColoring: added '<!--@@ wikitext @@-->' pattern to hide wikitext
 - PageFunctions: added '#noext' magic word
 - Added 'AutoRedirect' extension
-- 
+- Added 'DirectoryManager' extension
+- Simplified installation procedure for all 'stubbed' extensions
